# LLM-MCP-A2A

./: .env.router  .env.weather  .gitattributes  .gitignore  Makefile  README.md  docker-compose.router.yml  docker-compose.yml  documentation-a2a-russian.md  postman-collection-a2a-spec.json
agent/: .env.example  Dockerfile  README.md  pyproject.toml
agent/app/: __main__.py  agent.py  agent_executor.py
mcp-weather/: Dockerfile  Makefile  README.md  pyproject.toml  server.py
mcp-weather/test/: README.md  run_tests.py  test_integration.py  test_tools.py  test_weather_api.py
router/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  litellm-1.72.3-py3-none-any.whl  pyproject.toml  run.sh
router/app/: agent_executor.py  fastapi_host_server.py  host_agent.py  main.py  remote_agent_connection.py  router_agent.py  start_server.py  task_manager.py  unified_server.py
router/tests/: conftest.py  test_agent_executor.py  test_api.py  test_host_agent.py  test_main.py  test_remote_agent_connection.py  test_router_agent.py  test_task_manager.py
