[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agent-template"
version = "0.1.0"
description = "Evolution AI agent using Google ADK and MCP tools"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.6",
    "google-adk>=1.0.0",
    "opentelemetry-api",
    "opentelemetry-exporter-jaeger",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-starlette",
    "opentelemetry-sdk",
    "google-genai>=1.9.0",
    "litellm",
    "protobuf==6.31.1",
    "python-dotenv>=1.1.0",
    "requests>=2.31.0",
    "openinference-semantic-conventions>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
litellm = { path = "litellm-1.72.3-py3-none-any.whl" }

